initial css styling

--- a/formconcept.htm
+++ b/formconcept.htm
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript">
 
 	function displayBiblioPage(book, chap, vers) {
@@ -201,83 +202,87 @@
 	</script>
 </head>
 <body>
-<form name="BibleRefForm">
-	<select id="bookselect" name="book" onchange="updateAll(this)">
-		<option value="1">Genesis</option>
-		<option value="2">Exodus</option>
-		<option value="3">Leviticus</option>
-		<option value="4">Numbers</option>
-		<option value="5">Deuteronomy</option>
-		<option value="6">Joshua</option>
-		<option value="7">Judges</option>
-		<option value="8">Ruth</option>
-		<option value="9">1 Samuel</option>
-		<option value="10">2 Samuel</option>
-		<option value="11">1 Kings</option>
-		<option value="12">2 Kings</option>
-		<option value="13">1 Chronicles</option>
-		<option value="14">2 Chronicles</option>
-		<option value="15">Ezra</option>
-		<option value="16">Nehemiah</option>
-		<option value="17">Esther</option>
-		<option value="18">Job</option>
-		<option value="19">Psalm</option>
-		<option value="20">Proverbs</option>
-		<option value="21">Ecclesiastes</option>
-		<option value="22">Song of Solomon</option>
-		<option value="23">Isaiah</option>
-		<option value="24">Jeremiah</option>
-		<option value="25">Lamentations</option>
-		<option value="26">Ezekiel</option>
-		<option value="27">Daniel</option>
-		<option value="28">Hosea</option>
-		<option value="29">Joel</option>
-		<option value="30">Amos</option>
-		<option value="31">Obadiah</option>
-		<option value="32">Jonah</option>
-		<option value="33">Micah</option>
-		<option value="34">Nahum</option>
-		<option value="35">Habakkuk</option>
-		<option value="36">Zephaniah</option>
-		<option value="37">Haggai</option>
-		<option value="38">Zechariah</option>
-		<option value="39">Malachi</option>
-		<option value="40">Matthew</option>
-		<option value="41">Mark</option>
-		<option value="42">Luke</option>
-		<option value="43">John</option>
-		<option value="44">Acts</option>
-		<option value="45">Romans</option>
-		<option value="46">1 Corinthians</option>
-		<option value="47">2 Corinthians</option>
-		<option value="48">Galatians</option>
-		<option value="49">Ephesians</option>
-		<option value="50">Philippians</option>
-		<option value="51">Colossians</option>
-		<option value="52">1 Thessalonians</option>
-		<option value="53">2 Thessalonians</option>
-		<option value="54">1 Timothy</option>
-		<option value="55">2 Timothy</option>
-		<option value="56">Titus</option>
-		<option value="57">Philemon</option>
-		<option value="58">Hebrews</option>
-		<option value="59">James</option>
-		<option value="60">1 Peter</option>
-		<option value="61">2 Peter</option>
-		<option value="62">1 John</option>
-		<option value="63">2 John</option>
-		<option value="64">3 John</option>
-		<option value="65">Jude</option>
-		<option value="66">Revelation</option>
-	</select>
-	<select id="chapselect" name="chapter" onchange="updateAll(this)">
-		<option value="0">&times;</option>
-	</select>
-	<select id="versselect" name="verse" onchange="updateAll(this)">
-		<option value="0">&times;</option>
-	</select>
-	<!-- <input type="button" name="button" value="Look up" onclick="displayBiblioPage(book.value, chapter.value, verse.value)"> -->
-</form>
-<h3 id="biblioref">Oh come on! You can figure Genesis out.</h3>
+<div class="box">
+	<form name="BibleRefForm">
+		<select id="bookselect" name="book" onchange="updateAll(this)">
+			<option value="1">Genesis</option>
+			<option value="2">Exodus</option>
+			<option value="3">Leviticus</option>
+			<option value="4">Numbers</option>
+			<option value="5">Deuteronomy</option>
+			<option value="6">Joshua</option>
+			<option value="7">Judges</option>
+			<option value="8">Ruth</option>
+			<option value="9">1 Samuel</option>
+			<option value="10">2 Samuel</option>
+			<option value="11">1 Kings</option>
+			<option value="12">2 Kings</option>
+			<option value="13">1 Chronicles</option>
+			<option value="14">2 Chronicles</option>
+			<option value="15">Ezra</option>
+			<option value="16">Nehemiah</option>
+			<option value="17">Esther</option>
+			<option value="18">Job</option>
+			<option value="19">Psalm</option>
+			<option value="20">Proverbs</option>
+			<option value="21">Ecclesiastes</option>
+			<option value="22">Song of Solomon</option>
+			<option value="23">Isaiah</option>
+			<option value="24">Jeremiah</option>
+			<option value="25">Lamentations</option>
+			<option value="26">Ezekiel</option>
+			<option value="27">Daniel</option>
+			<option value="28">Hosea</option>
+			<option value="29">Joel</option>
+			<option value="30">Amos</option>
+			<option value="31">Obadiah</option>
+			<option value="32">Jonah</option>
+			<option value="33">Micah</option>
+			<option value="34">Nahum</option>
+			<option value="35">Habakkuk</option>
+			<option value="36">Zephaniah</option>
+			<option value="37">Haggai</option>
+			<option value="38">Zechariah</option>
+			<option value="39">Malachi</option>
+			<option value="40">Matthew</option>
+			<option value="41">Mark</option>
+			<option value="42">Luke</option>
+			<option value="43">John</option>
+			<option value="44">Acts</option>
+			<option value="45">Romans</option>
+			<option value="46">1 Corinthians</option>
+			<option value="47">2 Corinthians</option>
+			<option value="48">Galatians</option>
+			<option value="49">Ephesians</option>
+			<option value="50">Philippians</option>
+			<option value="51">Colossians</option>
+			<option value="52">1 Thessalonians</option>
+			<option value="53">2 Thessalonians</option>
+			<option value="54">1 Timothy</option>
+			<option value="55">2 Timothy</option>
+			<option value="56">Titus</option>
+			<option value="57">Philemon</option>
+			<option value="58">Hebrews</option>
+			<option value="59">James</option>
+			<option value="60">1 Peter</option>
+			<option value="61">2 Peter</option>
+			<option value="62">1 John</option>
+			<option value="63">2 John</option>
+			<option value="64">3 John</option>
+			<option value="65">Jude</option>
+			<option value="66">Revelation</option>
+		</select>
+		<select id="chapselect" name="chapter" onchange="updateAll(this)">
+			<option value="0">&times;</option>
+		</select>
+		<select id="versselect" name="verse" onchange="updateAll(this)">
+			<option value="0">&times;</option>
+		</select>
+		<!-- <input type="button" name="button" value="Look up" onclick="displayBiblioPage(book.value, chapter.value, verse.value)"> -->
+	</form>
+</div>
+<div class="box">
+	<h3 id="biblioref">Oh come on! You can figure Genesis out.</h3>
+</div>
 </body>
 </html>
