simplified div structure & js using <span>s

--- a/formconcept.htm
+++ b/formconcept.htm
@@ -85,10 +85,7 @@
 	</form>
 </div>
 <div class="box" id="bibliorefdiv" style="border-color: rgb(51, 51, 51);">
-	<div class="container">
-		<h3 id="currentresult">&nbsp;</h3>
-		<h3 id="upcomingresult"></h3>
-	</div>
+	<h3 id="biblio_full">Bibliotheca Volume <span id="biblio_vol">0</span>, page <span id="biblio_pag">0</span></h3>
 </div>
 </body>
 </html>
