more attempts to smootly stretch spans

--- a/formconcept.htm
+++ b/formconcept.htm
@@ -85,7 +85,7 @@
 	</form>
 </div>
 <div class="box" id="bibliorefdiv" style="border-color: rgb(51, 51, 51);">
-	<h3 id="biblio_full">Bibliotheca Volume <span id="biblio_vol">0</span>, page <span id="biblio_pag">0</span></h3>
+	<h3 id="biblio_full">Bibliotheca Volume <span class="ref_span" id="biblio_vol">0</span>, page <span class="ref_span" id="biblio_pag">0</span></h3>
 </div>
 </body>
 </html>
