more attempts to smootly stretch spans

--- a/formconcept.htm
+++ b/formconcept.htm
@@ -84,10 +84,8 @@
 		<!-- <input type="button" name="button" value="Look up" onclick="displayBiblioPage(book.value, chapter.value, verse.value)"> -->
 	</form>
 </div>
-<<<<<<< HEAD
 <div class="box" id="bibliorefdiv">
-	<h3 id="biblio_full">Bibliotheca Volume <span id="biblio_vol">0</span>, page <span id="biblio_pag">0</span></h3>
->>>>>>> simplified div structure & js using <span>s
+	<h3 id="biblio_full">Bibliotheca Volume <span class="ref_span" id="biblio_vol">0</span>, page <span class="ref_span" id="biblio_pag">0</span></h3>
 </div>
 </body>
 </html>
