--- a/formconcept.htm
+++ b/formconcept.htm
@@ -84,7 +84,7 @@
 		<!-- <input type="button" name="button" value="Look up" onclick="displayBiblioPage(book.value, chapter.value, verse.value)"> -->
 	</form>
 </div>
-<div class="box" id="bibliorefdiv" style="border-color: rgb(51, 51, 51);">
+<div class="box" id="bibliorefdiv">
 	<div class="container">
 		<h3 id="currentresult">&nbsp;</h3>
 		<h3 id="upcomingresult"></h3>
