--- a/formconcept.htm
+++ b/formconcept.htm
@@ -84,7 +84,7 @@
 		<!-- <input type="button" name="button" value="Look up" onclick="displayBiblioPage(book.value, chapter.value, verse.value)"> -->
 	</form>
 </div>
-<div class="box" id="bibliorefdiv" style="border-color: rgb(51, 51, 51);">
+<div class="box" id="bibliorefdiv">
 	<h3 id="biblio_full">Bibliotheca Volume <span class="ref_span" id="biblio_vol">0</span>, page <span class="ref_span" id="biblio_pag">0</span></h3>
 </div>
 </body>
