attempt one, works pretty well but allows user scaling

--- a/formconcept.htm
+++ b/formconcept.htm
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="bibliotheca.js"></script>
+	<meta name="viewport" content="width=320, initial-scale=1">
 </head>
 <body>
 <div class="box">
