--- a/formconcept.htm
+++ b/formconcept.htm
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="bibliotheca.js"></script>
-	<meta name="viewport" content="width=320, initial-scale=1">
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
 </head>
 <body>
 <div class="box">
