--- a/formconcept.htm
+++ b/formconcept.htm
@@ -86,7 +86,7 @@
 	</form>
 </div>
 <div class="box" id="bibliorefdiv">
-	<div class="container">
+	<div class="container" style="font-family: Futura-Medium;">
 		<h3 id="currentresult">&nbsp;</h3>
 		<h3 id="upcomingresult"></h3>
 	</div>
