Rename formconcept to demo, and add a demoesque notice

--- a/demo.html
+++ b/demo.html
@@ -91,5 +91,6 @@
 		<h3 id="upcomingresult"></h3>
 	</div>
 </div>
+<p class="notice">Hark! This is a proof of concept. All page numbers are <em>wrong</em>.<br>But you can help me build the real lookup table <a href="https://docs.google.com/spreadsheets/d/14_Ee4x1X0o0nqes2hm9aPgRAta_jOsb6CEG6TnorDn4/edit?usp=sharing">here</a>.</p>
 </body>
 </html>
